--- a/Hotel_Project/css/style.css
+++ b/Hotel_Project/css/style.css
@@ -71,8 +71,20 @@ p{
 }
 
 .bg-primary{
-    background: #333;
-    color:  #f7c08a;
+    color: #333;
+    background:  #f7c08a;
+}
+
+.py-1 { padding: 10px 0;} /*Padding in the y-axis*/
+.py-2 { padding: 20px 0;}
+.py-3 { padding: 30px 0;}
+
+.clr{
+    clear: both;
+}
+
+.l-heading{
+    font-size: 40px;
 }
 
 /* Navbar */
@@ -157,3 +169,80 @@ p{
 #home-info .info-content p{
     padding-bottom: 30px;
 }
+
+/*Features */
+.box{
+    float:left;
+    width: 33.3%;
+    padding: 50px;
+    text-align: center;
+}
+
+.box i{
+    margin-bottom: 10px;
+}
+
+/* About Info**********************/
+
+#about-info .info-right{
+    float:right;
+    width: 50%;
+    min-height: 100%;
+}
+
+#about-info .info-right img{
+    width: 70%;
+    display:block;
+    margin: auto;
+    border-radius: 50%;
+}
+
+#about-info .info-left{
+    float:left;
+    width: 50%;
+    min-height: 100%;
+}
+
+/*Testimonials*/
+#testimonials{
+    height: 600px;
+    background: url(/image_resources/test-bg.jpg) no-repeat center center/cover;
+    padding: 100px;
+}
+
+#testimonials .testimonial{
+    padding: 20px;
+    margin-bottom: 40px;
+    border-radius: 5px;
+    opacity: 0.9;
+} 
+
+#testimonials .testimonial img{
+    width: 100px;
+    float:left;
+    margin-right: 20px;
+    border-radius: 50%;
+}
+
+#testimonials h2{
+    color: #fff;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+/*Footer*/
+#main-footer{
+    text-align: center;
+    background: #444;
+    color: #fff;
+    padding: 20px;
+}
+
+
+
+
+
+
+
+
+
