--- a/Hotel_Project/css/style.css
+++ b/Hotel_Project/css/style.css
@@ -8,7 +8,7 @@
 /* Main styling: Body, links, heading, paragraph - Classless elements */
 html, body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1.7em;
+    line-height: 1.5;
 }
 
 a{
@@ -85,6 +85,7 @@ p{
 
 .l-heading{
     font-size: 40px;
+    line-height: 1.1;
 }
 
 /* Navbar */
@@ -98,7 +99,7 @@ p{
     color:#fff;
 }
 
-#navbar h1{
+#navbar .logo {
     float:left;
     padding-top: 20px;
 }
@@ -128,6 +129,10 @@ p{
 #showcase{
     background: url('/image_resources/showcase.jpg') no-repeat center center/cover;
     height: 600px;
+}
+
+#showcase h1{
+    line-height: 1.2;
 }
 
 #showcase .showcase-content{
@@ -205,9 +210,9 @@ p{
 
 /*Testimonials*/
 #testimonials{
-    height: 600px;
+    height: 100%;
     background: url(/image_resources/test-bg.jpg) no-repeat center center/cover;
-    padding: 100px;
+    padding-top: 100px;
 }
 
 #testimonials .testimonial{
