--- a/EdgeLedger/css/utilities.css
+++ b/EdgeLedger/css/utilities.css
@@ -1,5 +1,4 @@
 /*Text colors*/
-
 .text-primary {
     color: #28a745;
 }
@@ -23,23 +22,103 @@
     opacity: 0.9;
 }
 
-.btn-primary{
+.btn-primary, .bg-primary{
     background: #28a745;
     color: #fff;
 }
 
-.btn-secondary{
+.btn-secondary, .bg-secondary{
     background: #0284d0;
     color: #fff;
 }
 
-.btn-dark{
+.btn-dark, .bg-dark{
     background: #333;
     color: #fff;
 }
 
-.btn-light{
+.btn-light, .bg-light{
     background: #f4f4f4;
     color: #333;
 }
 
+.btn-outline{
+    background: transparent;
+    border: 1px solid #fff;
+}
+
+/*Icons*/
+.icons {
+    padding: 30px;
+}
+
+.icons h3{
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.icons i{ /*We can use custom properties for this... Later!*/
+    background: #28a745;
+    color: #fff;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+.flex-items{
+    display:flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.flex-items > div { /*> operator selects all the direct children of a particular selector*/
+    padding: 20px;
+}
+
+/*Flex columns*/
+.flex-columns .row{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.flex-columns .column{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex:1;
+}
+
+.flex-columns .column .column-1, 
+.flex-columns .column .column-2 {
+    height:100%;
+}
+
+.flex-columns img{
+    width:100%;
+    height:100%;
+    object-fit: cover; /*Fixes imaage distortion issues, covers the available area without distorting images*/
+}
+
+.flex-columns .column-2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+}
+
+.flex-columns h2{
+    font-size: 40px;
+    font-weight: 100;
+}
+
+.flex-columns h4{
+    margin-bottom: 10px;
+}
+
+.flex-columns p{
+    margin: 20px 0;
+}
