--- a/EdgeLedger/css/style.css
+++ b/EdgeLedger/css/style.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+/*Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
-* {
+/*Global styles*/
+*{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
 body{
-    font-family: 'Open-Sans', 'sans-serif';
+    font-family: 'Open Sans', sans-serif;
     background: #fff;
     color: #333;
     line-height: 1.6;
@@ -22,9 +24,9 @@ a{
     text-decoration: none;
 }
 
-h1,h2 {
-    font-weight: 300;
-    line-height: 1.2;
+h1,h2{
+    font-weight: 330;
+    line-height:1.2;
 }
 
 p{
@@ -32,83 +34,59 @@ p{
 }
 
 img{
-    width: 100%;
+    width:100%;
 }
 
-/*Navbar*/
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #333;
-    color: #fff;
-    opacity: 0.8;
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    top: 0px;
-    padding: 0 30px;
-}
+/*Hero Section*/
 
-.navbar a{
-    color: #fff;
-    padding: 10px 20px;
-    margin: 0px 5px;
-    
-}
-
-.navbar ul{
-    display: flex;
-}
-
-.navbar a:hover{
-    border-bottom: #28a745 2px solid; 
-}
-
-.navbar .logo{
-    font-weight: 400;
-}
-
-/*Hero - Header*/
-
-.hero {
-    background: url('/image_resources/home/showcase.jpg') no-repeat center center/cover;
+.hero{
+    background: url('/image_resources/home/showcase.jpg') no-repeat center center/cover; 
     height: 100vh;
     position: relative;
     color: #fff;
 }
 
-.hero .content {
-    display: flex;
+/*Content*/
+
+.hero .content{
+    display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 100%;
+    height:100%;
     padding: 0 20px;
 }
 
-.hero .content h1 {
+.hero .content h1{
     font-size: 55px;
 }
 
-.hero .content p {
-    font-size: 23px;
+.hero .content p{
+    font-size:23px;
     max-width: 600px;
-    margin: 20px 0 30px;
+    margin: 20px 0 30px; 
 }
 
-.hero::before{ /* Controls the overlay color, placed before (on top) the content div*/
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background:rgba(0,0,0,0.6); /*Last parameter is alpha, controls opacity*/
+/*Icons*/
+.icons{
+    padding: 30px;
 }
 
-.hero *{
-    z-index:10;
+.icons h3{
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
+.icons i{
+    background-color: #28a745;
+    color: #fff;
+    padding: 1rem; /*16 px rem font size*/
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+/*Style CSS*/
+.cases img:hover{
+    opacity: 0.7;
+}
