Completes EdgeLedger HomePage and fixes some bugs in the Hotel Project Website

--- a/EdgeLedger/css/utilities.css
+++ b/EdgeLedger/css/utilities.css
@@ -106,6 +106,10 @@
     height: 100%;
 }
 
+.flex-items > div {
+    padding: 20px;
+}
+
 /*Flex columns*/
 .flex-columns .row{
     display: flex;
