--- a/EdgeLedger/css/style.css
+++ b/EdgeLedger/css/style.css
@@ -40,14 +40,13 @@ img{
 /*Hero Section*/
 
 .hero{
-    background: url('/image_resources/home/showcase.jpg') no-repeat center center/cover; 
+    background: url('../image_resources/home/showcase.jpg') no-repeat center center/cover; 
     height: 100vh;
     position: relative;
     color: #fff;
 }
 
 /*Content*/
-
 .hero .content{
     display:flex;
     flex-direction: column;
@@ -89,4 +88,63 @@ img{
 /*Style CSS*/
 .cases img:hover{
     opacity: 0.7;
+}
+
+/*Team*/
+.team img{
+    border-radius: 50%;
+}
+
+/* Callback form  */
+.callback-form{
+    width: 100%;
+    padding: 20px 0;
+}
+
+.callback-form label{
+    display:block;
+    margin-bottom: 5px;
+}
+
+.callback-form .form-control{
+    margin-bottom: 15px;
+}
+
+.callback-form input{
+    width: 100%;
+    padding: 4px;
+    height: 40px;
+    border: #f5f5f5 1px solid;
+}
+
+.callback-form input:focus{
+    outline-color: #28a745;
+}
+
+.callback-form .btn{
+    padding: 12px;
+    margin-top: 20px;
+}
+
+/*Footer*/
+
+.footer{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+}
+
+.footer a {
+    color: #fff;
+}
+
+.footer .social > * {
+    margin-right: 30px;
+}
+
+.footer a:hover{
+    color: #28a745;
 }
