--- a/Hotel_Project/css/style.css
+++ b/Hotel_Project/css/style.css
@@ -127,7 +127,7 @@ p{
 
 /* Showcase */
 #showcase{
-    background: url('/image_resources/showcase.jpg') no-repeat center center/cover;
+    background: url("../image_resources/showcase.jpg") no-repeat center center/cover;
     height: 600px;
 }
 
@@ -158,7 +158,7 @@ p{
 #home-info .info-img{
     float: left;
     width: 50%;
-    background: url(/image_resources/photo-1.jpg) no-repeat;
+    background: url("../image_resources/photo-1.jpg") no-repeat;
     min-height: 100%;
 }
 
@@ -211,7 +211,7 @@ p{
 /*Testimonials*/
 #testimonials{
     height: 100%;
-    background: url(/image_resources/test-bg.jpg) no-repeat center center/cover;
+    background: url("../image_resources/test-bg.jpg") no-repeat center center/cover;
     padding-top: 100px;
 }
 
