--- a/09_MiniProjects/09C_Knowledge_Timeline/style.css
+++ b/09_MiniProjects/09C_Knowledge_Timeline/style.css
@@ -52,16 +52,27 @@ body{
     padding: 1rem;
     background: var(--secondary-color);
     transition: all 0.5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
 }
 
-/*Right side*/
+/*Right side arrow*/
 #timeline ul li:nth-child(odd) div{
     left: 40px;
+    transform: translateX(200px);
 }
 
-/*Left side*/
+/*Left side arrow*/
 #timeline ul li:nth-child(even) div{
-    left: -434px; /*This value */
+    left: -434px; /*This value is calculated as div.width + 40px - li.width = 400 + 40 -6 = 434px*/
+    transform: translateX(-200px);
+}
+
+/*Show boxes class*/
+#timeline ul li.show div{
+    transform: none;
+    visibility: visible;
+    opacity: 1;
 }
 
 /*Dots*/
@@ -72,7 +83,71 @@ body{
     left: 50%;
     width: 25px;
     height: 25px;
-    background: var(--secondary-color);
+    background: inherit;
     transform: translateX(-50%);
     border-radius: 50%;
+    transition: background 0.5s ease-in-out; /*JS file related CSS rule*/
 }
+
+/*WHen the show class is added, change the colors of the dots*/
+#timeline ul li.show:after{
+    background: var(--secondary-color);
+}
+
+/*Arrows Base*/
+#timeline div:before{
+    content: '';
+    position: absolute;
+    bottom: 5px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+}
+
+/*Right side arrows*/
+#timeline ul li:nth-child(odd) div:before{
+    left: -15px;
+    border-width: 8px 16px 8px 0px;
+    border-color: transparent var(--secondary-color) transparent transparent; 
+}
+
+#timeline ul li:nth-child(even) div:before{
+    right: -15px;
+    border-width: 8px 0 8px 16px;
+    border-color: transparent transparent transparent var(--secondary-color);
+}
+
+/*Media queries*/
+/*Tablet screens*/
+@media(max-width: 900px){
+    #timeline ul li div{
+        width: 250px;
+    }
+
+    #timeline ul li:nth-child(even) div {
+        left: -284px; /*This value is calculated as follows*/
+    }
+}
+
+/*Smartphones*/
+@media(max-width: 600px){
+    #timeline ul li{
+        margin-left: 20px;
+    }
+
+    #timeline ul li div{
+        width: calc(100vw - 90px) /*calc() - Calculates widths dynamically*/
+    }
+
+    #timeline ul li:nth-child(even) div {
+        left: 40px;
+    }
+
+    #timeline ul li:nth-child(even) div:before{
+        left: -15px;
+        border-width: 8px 16px 8px 0px;
+        border-color: transparent var(--secondary-color) transparent transparent; 
+    }
+}
+
+
