--- a/011_NewsGrid_Website/css/style.css
+++ b/011_NewsGrid_Website/css/style.css
@@ -43,6 +43,10 @@ h1,h2,h3,h4,h5,h6{
     line-height: 1.3;
 }
 
+p{
+    margin: 0.5rem 0;
+}
+
 /*Utility classes*/
 .container{
     max-width: var(--max-width);
@@ -62,7 +66,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .category-sports{background: var(--sports-color);}
-.category-tech{background: var(--ent-color);}
+.category-ent{background: var(--ent-color);}
 .category-tech{background: var(--tech-color);}
 
 .btn{
@@ -85,6 +89,61 @@ h1,h2,h3,h4,h5,h6{
     display: block;
     width: 100%;
     text-align: center;
+}
+
+.card{
+    background: #fff;
+    padding: 1rem;
+}
+
+.bg-dark{
+    background: var(--dark-color);
+    color: #fff;
+}
+
+.bg-primary{
+    background: var(--primary-color);
+    color: #fff;
+}
+
+.bg-secondary{
+    background: var(--secondary-color);
+    color: #fff;
+}
+
+.bg-dark h1, 
+.bg-dark h2,
+.bg-dark h3,
+.bg-dark a,
+.bg-primary h1, 
+.bg-primary h2,
+.bg-primary h3,
+.bg-primary a, 
+.bg-secondary h1, 
+.bg-secondary h2,
+.bg-secondary h3,
+.bg-secondary a{
+    color: #fff;
+}
+
+/*Padding top and bottom*/
+.py-1{padding: 1.5rem 0}
+.py-2{padding: 2rem 0}
+.py-3{padding: 3rem 0}
+
+/*Padding all around*/
+.p-1{padding: 1.5rem }
+.p-2{padding: 2rem }
+.p-3{padding: 3rem }
+
+.lists li{
+    padding: 0.5rem 0;
+    border-bottom: #555 dotted 1px;
+    width: 90%;
+}
+
+#main-footer .lists li a:hover{
+    color: var(--primary-color);
 }
 
 /*Navigation*/
@@ -168,4 +227,61 @@ h1,h2,h3,h4,h5,h6{
 
 #showcase .showcase-content p{
     margin-bottom: 1rem;
+}
+
+/*Home Articles*/
+#home-articles .articles-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+#home-articles .articles-container > *:first-child,
+#home-articles .articles-container > *:last-child{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    grid-column: 1 / span 2;
+}
+
+#home-articles .articles-container > *:last-child{
+    grid-column: 2 / span 2;
+}
+
+/* Footer */
+#main-footer{
+    background: var(--dark-color);
+    color: #fff;
+}
+
+#main-footer img{
+    width: 150px;
+}
+
+#main-footer a{
+    color: #fff;
+}
+
+#main-footer .footer-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.5rem;
+}
+
+#main-footer .footer-container > *:last-child{
+    background: #444;
+    grid-column: 1 / span 4;
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 0.75rem;
+}
+
+#main-footer .footer-container input[type = 'email']{
+    width: 90%;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+#main-footer .footer-container input[type = 'submit']{
+    width: 90%;
 }
